--- a/package.json
+++ b/package.json
@@ -18,5 +18,12 @@
   "bugs": {
     "url": "https://github.com/coral/klausroute/issues"
   },
-  "homepage": "https://github.com/coral/klausroute#readme"
+  "homepage": "https://github.com/coral/klausroute#readme",
+  "dependencies": {
+    "body-parser": "^1.14.1",
+    "express": "^4.13.3",
+    "httpolyglot": "^0.1.1",
+    "lodash": "^3.10.1",
+    "socket.io": "^1.3.7"
+  }
 }
