--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "jssip": "~0.7.9",
     "lodash": "~3.10.1",
     "jquery": "~2.1.4",
-    "jquery-ui": "~1.11.4"
+    "jquery-ui": "~1.11.4",
+    "sip.js": "~0.7.2"
   }
 }
