--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
+    "http-proxy": "^1.12.0",
     "httpolyglot": "^0.1.1",
     "lodash": "^3.10.1",
     "socket.io": "^1.3.7"
