--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
     "jquery-ui": "~1.11.4",
     "sip.js": "~0.7.2",
     "bootstrap": "~3.3.6",
-    "semantic": "semantic-ui#~2.1.6"
+    "semantic": "semantic-ui#~2.1.6",
+    "knockout": "~3.4.0"
   }
 }
