--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.14.1",
     "del": "^2.1.0",
     "express": "^4.13.3",
+    "express-force-ssl": "^0.3.0",
     "extend": "^3.0.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
