dramhack aer slut

--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
     "sip.js": "~0.7.2",
     "bootstrap": "~3.3.6",
     "semantic": "semantic-ui#~2.1.6",
-    "knockout": "~3.4.0"
+    "knockout": "~3.4.0",
+    "sigma": "~1.0.3"
   }
 }
