--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "asterisk-manager": "^0.1.15",
     "better-console": "^0.2.4",
     "body-parser": "^1.14.1",
+    "cors": "^2.7.1",
     "del": "^2.1.0",
     "express": "^4.13.3",
     "express-force-ssl": "^0.3.0",
@@ -52,13 +53,16 @@
     "gulp-watch": "^4.3.5",
     "http-proxy": "^1.12.0",
     "httpolyglot": "^0.1.1",
+    "jstoxml": "^0.2.3",
     "lodash": "^3.10.1",
     "map-stream": "0.0.6",
+    "object-to-xml": "^1.0.0",
     "require-dot-file": "^0.4.0",
     "run-sequence": "^1.1.5",
     "semantic-ui": "^2.1.6",
     "socket.io": "^1.3.7",
     "ws": "^0.8.0",
+    "xml2js": "^0.4.15",
     "yamljs": "^0.2.4"
   }
 }
